Basic setup with bundler working

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,5 +3,6 @@
   <h1> Welcome to the Bank of America online loans portal. </h1>
   <h3> Sign in with Box below to upload documents for your loan application </h3>
 
+  <%= link_to("Apply for a loan", "/apply") %>
 
 </div><!-- /.container -->
