--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,11 +2,19 @@
 <html>
 <head>
   <title>BoxBank</title>
+  <link href="/stylesheets/css/bootstrap.css" rel="stylesheet">
+  <link href="/stylesheets/css/bootstrap-theme.css" rel="stylesheet">
+  <link href="/stylesheets/css/main.css" rel="stylesheet">
+
 
 </head>
 <body>
 
 <%= yield %>
+
+<!-- Bootstrap core JavaScript & JQuery-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="/javascripts/js/bootstrap.min.js"></script>
 
 </body>
 </html>
