--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -1,6 +1,7 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-fixed-top" role="navigation">
   <div>
     <div class="navbar-header">
+      <img  src="/images/bofa-logo.png" height="50" />
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -11,7 +12,8 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li> HOME </li>
+        <li> Home </li>
+        <li> Apply </li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
