--- a/views/apply.erb
+++ b/views/apply.erb
@@ -8,7 +8,9 @@
 
   <% files = client.folder_items(Boxr::ROOT) %>
 
+  <ul id="file_list">
 
+  </ul>
 
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Add File</button>
 
@@ -18,3 +20,5 @@
 
 
 </div><!-- /.container -->
+
+<script src="/javascripts/js/filepicker.js"></script>
