--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,8 @@
   <h1> Welcome to the Bank of America online loans portal. </h1>
   <h3> Sign in with Box below to upload documents for your loan application </h3>
 
-  <%= link_to("Apply for a loan", auth_url) %>
+
+  <a href="<%= auth_url %>" class="btn btn-primary">Apply for a loan</a>
+
 
 </div><!-- /.container -->
