--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-fixed-top" role="navigation">
   <div>
     <div class="navbar-header">
-      <img  src="/images/bofa-logo.png" height="50" />
+      <a href="/"><img  src="/images/bofa-logo.png" height="50" /></a>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -12,8 +12,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li> Home </li>
-        <li> Apply </li>
+        <li> Logout </li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
