--- a/views/applications.erb
+++ b/views/applications.erb
@@ -14,6 +14,7 @@
     </ul>
   <% end %>
 
-  <%= link_to("Submit New Application", '/apply') %>
+  <a href="/apply" class="btn btn-primary">Submit New Application</a>
+
 
 </div>
