Folders ajax request works - files can be chosen from within folders -- WIP: reset file tree for second file add

--- a/views/app_submitted.erb
+++ b/views/app_submitted.erb
@@ -8,6 +8,6 @@
 
   <p> Your loan application documents have been stored in the folder "<%= folder %>" in your Box account"</p>
 
-  <p> You loan officer will be in touch shortly. Until then check the status of your application <%= link_to('here', '/') %> </p>
+  <p> You loan officer will be in touch shortly. Until then check the status of your application <a href="/">here</a> </p>
 
 </div>
