--- a/views/file_picker_modal.erb
+++ b/views/file_picker_modal.erb
@@ -10,11 +10,11 @@
       <div class="modal-body">
 
           <div class="filepicker">
-            <ul class="file-tree">
+            <ul class="file-tree" id="modal_file_ul">
               <% files.each do |i| %>
 
                 <% if i.type == "folder" %>
-                  <button type="button" class="file-btn btn" onclick="folderChosen()" >[<%= i.name  %>]   <%= i.created_at %></button>
+                  <button type="button" class="file-btn btn" onclick="folderChosen(<%= i.id %>)" >[<%= i.name  %>]   <%= i.created_at %></button>
                 <% else %>
                   <button type="button" class="btn file-btn" onclick="fileChosen(<%= i.id %>, '<%= i.name %>')" > <%= i.name  %>   <%= i.created_at %></button>
                 <% end %>
