--- a/views/apply.erb
+++ b/views/apply.erb
@@ -2,7 +2,7 @@
 
 <div class="contain" >
 
-  <h1> Upload or choose files to upload for your loan application  </h1>
+  <h1 class="form"> Upload or choose files to upload for your loan application </h1>
 
 
   <% client = getBoxClient() %>
@@ -21,8 +21,6 @@
   <label for="bankerselect">Banker:</label>
       <select name="bankerselect">
         <option value="232125343" selected>Mike Lapointe</option>
-        <option value="marvin">Marvin</option>
-        <option value="jen">Jen</option>
       </select>
 
       <br />
