--- a/views/index.erb
+++ b/views/index.erb
@@ -2,11 +2,13 @@
 
 <div class="contain" >
 
-  <h1> Welcome to the Bank of America online loans portal. </h1>
-  <h3> Sign in with Box below to upload documents for your loan application </h3>
+  <div class="startdiv">
+
+    <h1> Welcome to the Bank of America online loans portal. </h1>
+    <h3> Sign in with Box below to upload documents for your loan application </h3>
 
 
-  <a href="<%= auth_url %>" class="btn btn-primary">Apply for a loan</a>
-
+    <a href="<%= auth_url %>" class="btn btn-primary">Apply for a loan</a>
+  </div>
 
 </div><!-- /.container -->
