--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li> Logout </li>
+        <a href="/logout"><li> Logout </li></a>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
