--- a/views/review_application.erb
+++ b/views/review_application.erb
@@ -2,24 +2,32 @@
 
 <div class="contain" >
 
-  <div class="left_review_pane">
+  <div class="left_review_pane col-xs-10 col-sm-6">
     <h1><a href="/"><</a> Review Application </h1>
 
     <h2> <%= name %> </h2>
 
-    <p> Files Submitted </p>
+    <p> <strong> Files Submitted </strong> - Choose file below to view/comment </p>
     <ul>
       <% items.zip(dl_links).each do |i, dl| %>
-          <li><a href="<%=dl%>" ><%= i.name %></a></li>
+          <li><a href="<%=dl%>" onclick="confirmDownload()" ><%= i.name %></a></li>
       <% end %>
     </ul>
+
+    <button class="btn accept" onClick="acceptApplication()">Accept</button>
+    <button class="btn reject" onClick="acceptApplication()">Reject</button>
+
+
   </div>
 
-  <div class="right_review_pane">
+  <div class="right_review_pane col-xs-10 col-sm-6">
 
     <div class="viewer">
-    </div>
 
+      <iframe style="width: 100%; height: 500px;" src="https://view-api.box.com/1/sessions/7b8e51cb284a407ba5bec7a7fa2ba1b2/view?theme=light" height="240" width="320" seamless="" allowfullscreen=""></iframe>
+    </div>
+    <h3> Comments </h3>
+    <button class="btn btn-primary" onclick="addComment()">Add Comment</button>
 
   </div>
 
