--- a/views/apply.erb
+++ b/views/apply.erb
@@ -30,6 +30,8 @@
 
       <input type="submit" class="btn btn-primary" value="Apply">
     </form>
+    <br />
+    <a href="/" style="text-align:center">Cancel</a>
   </div>
 
     <%= erb :file_picker_modal %>
