--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -1,21 +1,23 @@
 
-div.navbar {
-  background-color: #d50021;
+div.navbar-inverse {
+  background-image: linear-gradient(to bottom, #D30D0C 0%, #BE0000 100%);
+
 }
 
 div.navbar li {
   color:white;
 }
 
-.navbar-nav {
+ul.navbar-nav {
   float: right;
-  font-size: 20px;
+  margin: 10px;
+  font-size: 18px;
 }
 
 div.contain {
 
   margin-top:65px;
-
+  padding:0px 10px;
 }
 
 div.startdiv{
@@ -46,9 +48,26 @@ button.file-btn{
   width: 80%;
   text-align: left;
   margin: 5px;
-  border: black 1px solid;
-  background-color: #89acca;
+  border: rgb(2, 86, 166) 1px solid;
+  background-color: rgba(49, 128, 202, 0.82);
   color: white;
+  border-radius: 10px;
+  display: block;
+
+
+
+}
+
+button.application-btn{
+  width: 300px;
+  text-align: left;
+  margin: 5px;
+  border: rgb(2, 86, 166) 1px solid;
+  background-color: rgba(49, 128, 202, 0.82);
+  color: white;
+  border-radius: 10px;
+  display: block;
+
 
 }
 
