--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-top" role="navigation">
+<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
   <div>
     <div class="navbar-header">
       <a href="/"><img  src="/images/bofa-logo.png" height="50" /></a>
@@ -12,7 +12,9 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <a href="/logout"><li> Logout </li></a>
+        <% if !defined? home %>
+          <a href="/logout"><li> Logout </li></a>
+        <% end %>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
