--- a/views/review_application.erb
+++ b/views/review_application.erb
@@ -3,7 +3,8 @@
 <div class="contain" >
 
   <div class="left_review_pane col-xs-10 col-sm-6">
-    <h1><a href="/"><</a> Review Application </h1>
+    <a href="/">< Back</a>
+    <h1> Review Application </h1>
 
     <h2> <%= name %> </h2>
 
