--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,14 @@
 
 
     <a href="<%= auth_url %>" class="btn btn-primary">Apply for a loan</a>
+
+    <br />
+    <br />
+    <br />
+
+    <h3> Employee Sign In </h3>
+    <a href="<%= admin_auth_url %>" class="btn btn-primary">View Applications [As Employee]</a>
+
   </div>
 
 </div><!-- /.container -->
