--- a/views/file_picker_modal.erb
+++ b/views/file_picker_modal.erb
@@ -8,6 +8,8 @@
       </div>
 
       <div class="modal-body">
+        <div id="file_back_button">
+        </div>
 
           <div class="filepicker">
             <ul class="file-tree" id="modal_file_ul">
