--- a/views/file_picker_modal.erb
+++ b/views/file_picker_modal.erb
@@ -20,8 +20,8 @@
       </div>
 
       <div class="modal-footer">
-        <p> Don't see your file here? <button id="upload_link" onclick="showUpload()"> Upload it to Box </a> </p>
-        <div class="modal-upload">
+        <p> Don't see your file here? <button id="upload_link" onclick="showUpload()"> Upload it to Box </button> </p>
+        <div class="modal-upload" id="modal-upload">
           <form accept-charset="UTF-8" action="apply/upload" class="new_article" data-remote="true" id="upload_file_form" method="post">
             <input type="file" name="files[]" id="file_select" multiple/>
             <input type="submit" value="Upload" id="upload_file_submit">
