--- a/views/applications.erb
+++ b/views/applications.erb
@@ -4,7 +4,7 @@
 
 
   <% if isAdmin? %>
-     <h1> Select and Application to Review </h1>
+     <h1> Select an Application to Review </h1>
   <% else %>
      <h1> Current Applications</h1>
   <% end %>
